Feature/mk criterion values (#143)
* Values for workout

* Update values

* Almost finish

* Try me

* Delete video_rul add workoutName

* Add workoutExerciseToDto

* Exercise DTO

* Workout

* Criterion unit as nullable

* Update changes

* Delete prints

* PerformedWorkoutValidator

* FitnessClubId

* FitnessClubId walidator

* fix

* Criterion constructor hibernate fix

* Ocelot changes

* Fix

* Soft exercise edit

* Soft exercise edit

* User data + missing fields

* Exercise id in DTO

* Change default data

* Changes

* Simple workout update

* Connection to Auth

* Typoo

* Getting userData

* Getting userData

* Bearer removal